Update account deletion and contact email addresses

--- a/privora_privacy_policy.html
+++ b/privora_privacy_policy.html
@@ -618,7 +618,7 @@
 
         <p>
           You can request deletion of your Privora account and associated data using our deletion page:
-          <code>https://privora.app/delete-account</code>
+          <code>https://privora.kazimahmed.com/delete-account</code>
         </p>
 
         <h3>What gets deleted</h3>
@@ -640,9 +640,9 @@
       <div class="section-card contact-card">
         <h2>📬 Contact</h2>
         <p>Questions about privacy, data requests, or this policy? Contact us.</p>
-        <a href="mailto:privacy@privora.app" class="contact-email">✉️ privacy@privora.app</a>
+        <a href="mailto:privora.app@gmail.com" class="contact-email">✉️ privora.app@gmail.com</a>
         <div style="margin-top: .75rem; color: rgba(255,255,255,.85); font-size: .95rem;">
-          Support: <a href="mailto:support@privora.app" style="color: rgba(255,255,255,.95); text-decoration: underline;">support@privora.app</a>
+          Support: <a href="mailto:privora.app@gmail.com" style="color: rgba(255,255,255,.95); text-decoration: underline;">privora.app@gmail.com</a>
         </div>
       </div>
     </section>
