Update privacy policy with new contact and company info

--- a/careerforge_privacy_policy.html
+++ b/careerforge_privacy_policy.html
@@ -179,12 +179,12 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <h1>Privacy Policy</h1>
-          <div class="sub">CareerForge — Effective date: <strong>[EFFECTIVE_DATE]</strong></div>
+          <div class="sub">CareerForge — Effective date: <strong>30th December 2025</strong></div>
         </div>
       </div>
       <div class="pillbar">
         <div class="pill">Version: 1.0</div>
-        <div class="pill">Contact: <a href="mailto:[YOUR_EMAIL]">[YOUR_EMAIL]</a></div>
+        <div class="pill">Contact: <a href="mailto:contact.careerforge@gmail.com">contact.careerforge@gmail.com</a></div>
       </div>
     </header>
 
@@ -192,7 +192,7 @@
       <div class="card-inner grid">
         <div>
           <p>
-            This Privacy Policy explains how <strong>[YOUR_COMPANY]</strong> (“we”, “us”, “our”) collects, uses, and protects
+            This Privacy Policy explains how <strong>Stackwright Studio</strong> (“we”, “us”, “our”) collects, uses, and protects
             information when you use the CareerForge mobile application (the “App”) and related services.
           </p>
 
@@ -254,7 +254,7 @@
           <ul>
             <li><strong>Access & update:</strong> You can update your resume and job tracker information in the App.</li>
             <li><strong>Export:</strong> You can export resumes (PDF/DOCX) and re-download from Export History.</li>
-            <li><strong>Delete:</strong> You can request deletion of your account and associated data by contacting us at <a href="mailto:[YOUR_EMAIL]">[YOUR_EMAIL]</a>.</li>
+            <li><strong>Delete:</strong> You can request deletion of your account and associated data by contacting us at <a href="mailto:contact.careerforge@gmail.com">contact.careerforge@gmail.com</a>.</li>
           </ul>
 
           <h2 id="retention">6) Data retention</h2>
@@ -278,19 +278,19 @@
           <p>
             If you have questions or requests about privacy, contact:
             <br />
-            <strong>[YOUR_COMPANY]</strong><br />
-            Email: <a href="mailto:[YOUR_EMAIL]">[YOUR_EMAIL]</a><br />
-            Website: <a href="[YOUR_DOMAIN]" target="_blank" rel="noreferrer">[YOUR_DOMAIN]</a>
+            <strong>Stackwright Studio</strong><br />
+            Email: <a href="mailto:contact.careerforge@gmail.com">contact.careerforge@gmail.com</a><br />
+            Website: <a href="https://careerforge.kazimahmed.com" target="_blank" rel="noreferrer">https://careerforge.kazimahmed.com</a>
           </p>
         </div>
 
         <aside>
           <div class="kvs">
-            <div class="kv"><div class="k">Controller</div><div class="v">[YOUR_COMPANY]</div></div>
+            <div class="kv"><div class="k">Controller</div><div class="v">Stackwright Studio</div></div>
             <div class="kv"><div class="k">App</div><div class="v">CareerForge</div></div>
             <div class="kv"><div class="k">Primary data</div><div class="v">Account + Resume + Job Tracker</div></div>
             <div class="kv"><div class="k">Data sharing</div><div class="v">No selling</div></div>
-            <div class="kv"><div class="k">Contact</div><div class="v">[YOUR_EMAIL]</div></div>
+            <div class="kv"><div class="k">Contact</div><div class="v">contact.careerforge@gmail.com</div></div>
             <div class="kv"><div class="k">Delete request</div><div class="v">Email us</div></div>
           </div>
 
@@ -304,7 +304,7 @@
     </div>
 
     <footer>
-      © <span id="y"></span> [YOUR_COMPANY]. All rights reserved.
+      © <span id="y"></span> Stackwright Studio. All rights reserved.
     </footer>
   </div>
 
